--- a/06_usart_printf/Debug/makefile
+++ b/06_usart_printf/Debug/makefile
@@ -33,34 +33,34 @@ $(wildcard ../makefile.init) \
 $(wildcard ../makefile.targets) \
 
 
-BUILD_ARTIFACT_NAME := 05_usart_tx
+BUILD_ARTIFACT_NAME := 06_usart_printf
 BUILD_ARTIFACT_EXTENSION := elf
 BUILD_ARTIFACT_PREFIX :=
 BUILD_ARTIFACT := $(BUILD_ARTIFACT_PREFIX)$(BUILD_ARTIFACT_NAME)$(if $(BUILD_ARTIFACT_EXTENSION),.$(BUILD_ARTIFACT_EXTENSION),)
 
 # Add inputs and outputs from these tool invocations to the build variables 
 EXECUTABLES += \
-05_usart_tx.elf \
+06_usart_printf.elf \
 
 MAP_FILES += \
-05_usart_tx.map \
+06_usart_printf.map \
 
 SIZE_OUTPUT += \
 default.size.stdout \
 
 OBJDUMP_LIST += \
-05_usart_tx.list \
+06_usart_printf.list \
 
 
 # All Target
 all: main-build
 
 # Main-build Target
-main-build: 05_usart_tx.elf secondary-outputs
+main-build: 06_usart_printf.elf secondary-outputs
 
 # Tool invocations
-05_usart_tx.elf 05_usart_tx.map: $(OBJS) $(USER_OBJS) /home/ankith/bareMetal/05_usart_tx/STM32F411RETX_FLASH.ld makefile objects.list $(OPTIONAL_TOOL_DEPS)
-	arm-none-eabi-gcc -o "05_usart_tx.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m4 -T"/home/ankith/bareMetal/05_usart_tx/STM32F411RETX_FLASH.ld" --specs=nosys.specs -Wl,-Map="05_usart_tx.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
+06_usart_printf.elf 06_usart_printf.map: $(OBJS) $(USER_OBJS) /home/ankith/bareMetal/06_usart_printf/STM32F411RETX_FLASH.ld makefile objects.list $(OPTIONAL_TOOL_DEPS)
+	arm-none-eabi-gcc -o "06_usart_printf.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m4 -T"/home/ankith/bareMetal/06_usart_printf/STM32F411RETX_FLASH.ld" --specs=nosys.specs -Wl,-Map="06_usart_printf.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
 	@echo 'Finished building target: $@'
 	@echo ' '
 
@@ -69,14 +69,14 @@ default.size.stdout: $(EXECUTABLES) makefile objects.list $(OPTIONAL_TOOL_DEPS)
 	@echo 'Finished building: $@'
 	@echo ' '
 
-05_usart_tx.list: $(EXECUTABLES) makefile objects.list $(OPTIONAL_TOOL_DEPS)
-	arm-none-eabi-objdump -h -S $(EXECUTABLES) > "05_usart_tx.list"
+06_usart_printf.list: $(EXECUTABLES) makefile objects.list $(OPTIONAL_TOOL_DEPS)
+	arm-none-eabi-objdump -h -S $(EXECUTABLES) > "06_usart_printf.list"
 	@echo 'Finished building: $@'
 	@echo ' '
 
 # Other Targets
 clean:
-	-$(RM) 05_usart_tx.elf 05_usart_tx.list 05_usart_tx.map default.size.stdout
+	-$(RM) 06_usart_printf.elf 06_usart_printf.list 06_usart_printf.map default.size.stdout
 	-@echo ' '
 
 secondary-outputs: $(SIZE_OUTPUT) $(OBJDUMP_LIST)
